--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,16 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="playersContainer">
             <!-- I giocatori verranno inseriti qui dinamicamente -->
         </div>
+        <br>
+        <div class="flex justify-between items-center mb-6">
+            <button onclick="window.location.href='podio.html'" 
+                class="flex items-center bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
+            </svg>
+        Vedi Classifica
+    </button>
+</div>
     </div>
 
     <script src="script.js"></script>
