--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,14 +19,25 @@
             <!-- I giocatori verranno inseriti qui dinamicamente -->
         </div>
         <br>
-        <div class="flex justify-between items-center mb-6">
-            <button onclick="window.location.href='podio.html'" 
+        
+    <div class="flex justify-between items-center mb-6">
+    
+    <div class="flex space-x-2">
+        <button onclick="window.location.href='podio.html'" 
                 class="flex items-center bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
+                <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
             </svg>
-        Vedi Classifica
-    </button>
+            Podio
+        </button>
+        <button onclick="window.location.href='notifiche.html'" 
+                class="flex items-center bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" />
+            </svg>
+            Notifiche
+        </button>
+    </div>
 </div>
     </div>
 
