--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,7 @@
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto px-4 py-8">
-        <img class="text-center  h-30 rounded-md" src="https://api.deepai.org/job-view-file/4d86515e-82be-43f8-a869-30531ebab444/outputs/output.jpg" alt="">
-        
+        <h1 class="text-3xl font-bold text-center mb-8 text-indigo-700">Lloret de mar 2025</h1>
         
         <div class="flex justify-center mb-6">
             <div class="animate-spin rounded-full h-10 w-10 border-t-2 border-b-2 border-indigo-500" id="loadingSpinner"></div>
